# server/docs/swagger.json
@@ -1,4 +1,8 @@
 {
+    "schemes": [
+        "http",
+        "https"
+    ],
     "swagger": "2.0",
     "info": {
         "description": "This is mini server",
@@ -6,7 +10,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:5555",
+    "host": "mini.eridani.site",
     "basePath": "/api/v1",
     "paths": {
         "/api/v1/create": {
